--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.liucz</groupId>
-    <artifactId>activemq</artifactId>
+    <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>activemq</name>
-    <description>Demo project for Spring Boot</description>
+    <name>demo</name>
+    <description>spring boot 使用 ActiveMQ</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -52,7 +52,6 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-pool</artifactId>
         </dependency>
-
     </dependencies>
 
     <build>
